; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_memorystatus.c_memorystatus_action_needed.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_memorystatus.c_memorystatus_action_needed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kill_under_pressure_cause = common dso_local global i32 0, align 4
@memorystatus_available_pages = common dso_local global i64 0, align 8
@memorystatus_available_pages_pressure = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @memorystatus_action_needed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @memorystatus_action_needed() #0 {
  %1 = load i32, i32* @kill_under_pressure_cause, align 4
  %2 = call i64 @is_reason_thrashing(i32 %1)
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %8, label %4

4:                                                ; preds = %0
  %5 = load i32, i32* @kill_under_pressure_cause, align 4
  %6 = call i64 @is_reason_zone_map_exhaustion(i32 %5)
  %7 = icmp ne i64 %6, 0
  br label %8

8:                                                ; preds = %4, %0
  %9 = phi i1 [ true, %0 ], [ %7, %4 ]
  %10 = zext i1 %9 to i32
  ret i32 %10
}

declare dso_local i64 @is_reason_thrashing(i32) #1

declare dso_local i64 @is_reason_zone_map_exhaustion(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
